--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
-  "rr-bench-core",
-  "rr-bench-sqlite",
-  "rr-bench-postgres",
-  "rr-data-gen"]
+    "rr-bench-base",
+    "rr-bench-sqlite",
+    "rr-bench-postgres",
+    "rr-data-gen"]
